plugins {
    id 'java'
}

group = 'fr.na.tcharlex.deadswap'
version = '1.0'

repositories {
    mavenCentral()
    mavenLocal()
}

dependencies {
    compileOnly 'org.spigotmc:spigot:1.21-R0.1-SNAPSHOT'
}

sourceCompatibility = targetCompatibility = '21'
compileJava.options.encoding = 'UTF-8'
setLibsDirName('../serveur/plugins')